--- a/comunidadeImpressionadora/templates/usuarios.html
+++ b/comunidadeImpressionadora/templates/usuarios.html
@@ -3,13 +3,58 @@
 {% block body %}
 
 <div class="container">
-    <h1>usuarios</h1>
-    {% for usuario in lista_usuarios%}
-        <strong>{{usuario}}</strong>
-        <hr>
+    <h1>Usuários</h1>
+    {% for usuario in lista_usuarios %}
+
+    <div class="container centralizado-vertical d-flex justify-content-center mb-3"><!-- 🟢 mb-3 para espaçamento -->
+
+        <div class="card p-3 w-100" style="max-width: 500px;">
+
+            <div class="d-flex flex-column align-items-center">
+
+                <div class="image mb-3">
+                    <img src="{{ url_for('static', filename='fotos_perfil/{}'.format(usuario.foto_perfil)) }}" class="rounded" width="155">
+                </div>
+
+                <div class="w-100 text-center">
+                    <h4 class="mb-0">{{ usuario.username }}</h4>
+                    <span>{{ usuario.email }}</span>
+                </div>
+
+                <div class="p-2 mt-3 bg-primary d-flex justify-content-between rounded text-white stats w-100">
+
+                    <div class="d-flex flex-column text-center">
+                        <span class="articles">Cursos</span>
+                        {% if 'Não Informado' in usuario.cursos %}
+                            <span class="number1">0</span>
+                        {% else %}
+                            <span class="number1">{{ usuario.cursos.count(';') + 1 }}</span>
+                        {% endif %}
+                    </div>
+
+                    <div class="d-flex flex-column text-center">
+                        <span class="rating">Posts</span>
+                        <span class="number3">0</span>
+                    </div>
+
+                </div>
+
+                <div class="mt-3 w-100">
+                    <strong>Cursos</strong><br>
+                    <div class="d-flex flex-wrap justify-content-center gap-2 mt-2">
+                        {% for curso in usuario.cursos.split(';') %}
+                            <button type="button" class="btn btn-success btn-sm" disabled>{{ curso }}</button>
+                        {% endfor %}
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
+
     {% endfor %}
-    
 </div>
-    
 
 {% endblock %}
