--- a/comunidadeImpressionadora/templates/editarPerfil.html
+++ b/comunidadeImpressionadora/templates/editarPerfil.html
@@ -77,7 +77,7 @@
             </div>
 
            <hr>
-            <p>Cursos</p>
+            <p>Habilidades</p>
             {% for campo in form %}
             {% if 'curso_' in campo.name%}
               <div class="form-check">
